# TaxChain

./: .gitignore  README.md  docker-compose.yml  roadmap.md  test-invoice.xml  thesis.docx
app/backend/: Cargo.toml  docker-compose.yml
app/backend/business-entity-service/: Cargo.toml  Dockerfile
app/backend/business-entity-service/src/: handlers.rs  main.rs  services.rs
app/backend/entity-management-service/src/: main.rs
app/backend/invoice-service/: Cargo.toml  Dockerfile
app/backend/invoice-service/src/: dto.rs  handlers.rs  main.rs  models.rs  services.rs  services_old.rs
app/backend/shared/common-types/: Cargo.toml
app/backend/shared/common-types/src/: business_entity.rs  country_code.rs  error.rs  invoice.rs  lib.rs  response.rs  tax_calculation.rs  zk_proof.rs
app/backend/tax-calculation-service/: Cargo.toml  Dockerfile
app/backend/tax-calculation-service/src/: handlers.rs  main.rs  services.rs
app/backend/tax-calculator/: Cargo.toml  Dockerfile  TEST_DATA.md
app/backend/tax-calculator/src/: main.rs
app/backend/tax-calculator/src/config/: mod.rs
app/backend/tax-calculator/src/dto/: request.rs  response.rs
app/backend/tax-calculator/src/handlers/: health.rs  mod.rs  tax.rs
app/backend/tax-calculator/src/models/: country_code.rs  error.rs  invoice.rs  line_item.rs  mod.rs  validation_error.rs
app/backend/tax-calculator/src/services/: mod.rs  tax_calculation.rs  zk_proof.rs
app/backend/tax-calculator/src/utils/: validation.rs
app/backend/validation-service/: Cargo.toml  Dockerfile
app/backend/validation-service/src/: handlers.rs  main.rs  services.rs
app/backend/zk-proof-service/: Cargo.toml  Dockerfile
app/backend/zk-proof-service/src/: handlers.rs  main.rs  services.rs
app/server/: Cargo.toml
app/server/entity_management_service/: Cargo.toml  README.md
app/server/entity_management_service/.sqlx/: query-082e7584b5fe141a382f30e6d7c4ec0d31bc19529554248b5a27db09a598352f.json  query-0b53bd59e285ee0d41d801fe7fc0e661bb56e0463312ef2296c72fb14aee4f67.json  query-2cbed7e6206e53ece173c0a945162a8fd335dbe22a265c3fda790605348b87d5.json  query-30119fb57df6294e14452179e8cb6cd8ff860b66f1f87e4c330c7d9293f70f3d.json  query-6e41fb710f576c3cb1c73de1a6a3c25f2002e851cc3f5d8ccf0ac41c5d1a35c4.json  query-758f63fc42bd986967bf422b7148c347eb7e7b7fc6452ff1b7b96da23dd52fe8.json  query-76dcb153f69ae72acc750b4bf8a26b0e0a473cbc6d58129b3e04a763a794ca4b.json  query-82a6821efbdd722dff3abfb8ca82848237fb83acb35048f4436e49e25f69fdb1.json  query-9dea5ed732ebab282826578ccb1d6150dd320d478f191e19397d9072803f9f72.json  query-b116fe15ffdc28f83e1b0e4be5e1cdefddfd7d5fe1e8f2959326786b5e353958.json  query-b60c041478c6f2533cae42d343c2390a0f061070f07f4d197f6a817fe0ecaf2f.json  query-c5adc28e17d87e9cd32680825e311e612976841e2a2304f076a47c17cddc6657.json  query-ca7896b9b1d077018ecf46f3becdbec33082af9d0e71900d306e1673f27cd93e.json  query-dcaf15d32ac424cbb229cce331463dcc129e2a86698a6ed0e088113024d3dec6.json
app/server/entity_management_service/migrations/: 20251121101300_address.sql  20251121101350_reprezentanti.sql  20251121101413_persoane_fizice.sql  20251212200817_add_wallet_ownership.sql
app/server/entity_management_service/src/: main.rs  openapi.rs  openapi.rs.bak
app/server/entity_management_service/src/handlers/: entitate_straina_handlers.rs  entity_dashboard_handlers.rs  entity_search_handlers.rs  institutie_publica_handlers.rs  mod.rs  ong_handlers.rs  persoana_fizica_handler.rs  persoana_fizica_handlers.rs  persoana_juridica_handlers.rs
app/server/entity_management_service/src/helpers/: helpers.rs
app/server/entity_management_service/src/middleware/: mod.rs  wallet_auth.rs
app/server/invoice_management_service/: Cargo.toml
app/server/tax_management_service/: Cargo.toml
app/server/zk_proof_service/: Cargo.toml
server/: .env.example  Cargo.toml  Dockerfile  create_dummy_data.sql
server/.github/: agent-instructions.md  copilot-instructions.md
server/migrations/: 01_taxchain_schema.sql  02_auth_tables.sql  03_invoice_tables.sql  04_anaf_mock.sql  05_add_invoice_transaction_type.sql  06_entity_management.sql  07_blockchain.sql  08_proof.sql  09_extended_proof.sql  10_fix_invoice_unique_constraints.sql  11_audit_trail.sql  12_proof_circuit_version.sql  13_sent_anchor.sql  14_invalidate_old_proofs.sql  15_invalidate_proofs_v2.sql  create_dummy_data.sql  phase_01_migrations.sql  phase_05_invoice_management.sql  taxchain.session.sql
server/src/: lib.rs  main.rs  startup.rs
server/src/auth/: google.rs  jwt.rs  middleware.rs  mod.rs  wallet.rs
server/src/blockchain/: anchor.rs
server/src/handlers/: anchor_handlers.rs  audit_handlers.rs  auth_handlers.rs  bnr_handlers.rs  efactura_handlers.rs  entity_handlers.rs  invoice_handlers.rs  mod.rs  partner_handlers.rs  persoana_fizica_handlers.rs  persoana_juridica_handlers.rs  proof_handlers.rs  public_handlers.rs  report_handlers.rs
server/src/models/: audit_model.rs  auth_models.rs  efactura_model.rs  entity_model.rs  invoice_model.rs  mod.rs  partner_model.rs  persoana_fizica.rs  persoana_fizica_model.rs  persoana_juridica_model.rs  proof_model.rs  user_model.rs
server/src/services/: audit_service.rs  bnr_service.rs  e_factura_service.rs  entity_service.rs  invoice_service.rs  mod.rs  partner_service.rs  persoana_fizica_service.rs  persoana_juridica_service.rs  proof_service.rs  report_service.rs  user_service.rs
server/src/utils/: helpers.rs  mod.rs  ubl.rs
server/src/validators/: common.rs  mod.rs  persoana_fizica_validators.rs  persoana_juridica_validators.rs
server/src/wallet/: encryption.rs  generator.rs  mod.rs
server/src/zk/: circuit.rs  mod.rs
server/tests/: invoice_tests.rs  persoana_fizica_tests.rs  test_persoana_fizica_handlers.rs
server/tests/common/: app_builder.rs  auth_helper.rs  fixtures.rs  mock_repo.rs  mock_user_repo.rs  mod.rs
server/tests/invoice/: app_builder.rs  create.rs  delete.rs  find_all.rs  find_by_id.rs  fixtures.rs  mock_repos.rs  mod.rs  status.rs
server/tests/persoana_fizica/: create.rs  delete.rs  find_all.rs  find_by_id.rs  mod.rs  update.rs
src/: main.rs
(+261 files in other folders)
