[package]
name = "taxchain"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
async-trait = "0.1"
dotenvy = "0.15"
serde_json = "1.0"
actix-http = "3.12.0"
jsonwebtoken  = "9"          
oauth2        = "4"         
ethers        = "2"          
aes-gcm       = "0.10"       
rand          = "0.8"        
sha2          = "0.10"       
base64        = "0.21"       
reqwest       = { version = "0.11", features = ["json"] }  
thiserror = "2.0.18"
