[workspace]
resolver = "2"
members = [
    "tax-calculator",
    # "api-gateway",  # TODO: Create this in Phase 2
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
anyhow = "1.0"