[workspace]
resolver = "2"
members = [
    "invoice-service",
    "tax-calculation-service",
    "business-entity-service",
    "zk-proof-service",
    "validation-service",
    "shared/common-types",
]

[workspace.dependencies]
# Shared dependencies across all microservices
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
