[workspace]
resolver = "2"
members = [
"entity_management_service",
"invoice_management_service",
"tax_management_service",
"zk_proof_service",
]

[workspace.dependencies]
actix-web = "4.9"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MultiversX SDK (official)
multiversx-sc = "0.53"
multiversx-sc-snippets = "0.53"
multiversx-sdk = "0.53"

thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
log = "0.4"
env_logger = "0.11"