[package]
name = "tax-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# For ZK proof generation (we'll add this later)
# circom-rs = "0.1"  # Placeholder for ZK integration