[package]
name = "entity_management_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = {workspace = true }
serde_json = { workspace = true }
log = { workspace = true }