[package]
name = "entity_management_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
actix-cors = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = {workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "chrono", "macros", "uuid"] }
utoipa-swagger-ui = { workspace = true }
utoipa-scalar = { workspace = true }
futures-util = "0.3.31"
